--- a/src/main/resources/ru/inversionkavkaz/btlclient/btlbase/controller/fxml/ViewIkBtlBaseClientCancellation.fxml
+++ b/src/main/resources/ru/inversionkavkaz/btlclient/btlbase/controller/fxml/ViewIkBtlBaseClientCancellation.fxml
@@ -32,27 +32,22 @@
         <JInvToolBar fx:id="toolBar" />
         <JInvTable fx:id="IK_BTL_BASE_CLIENT" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
             <columns>
-                <JInvTableColumn prefWidth="200" text="%AGREEREF">
-                    <columns>
-                        <JInvTableColumn fx:id="ITRNNUM" text="%ITRNNUM" fieldName="ITRNNUM"  />
-                        <JInvTableColumn fx:id="ICANCELPART" text="%ICANCELPART" fieldName="ICANCELPART"  />
-                    </columns>
-                </JInvTableColumn>
-                <JInvTableColumnDate fx:id="CREATED" text="%CREATED" fieldName="CREATED"  />
+                <JInvTableColumn fx:id="ICANCELPART" text="%ICANCELPART" fieldName="ICANCELPART"  prefWidth="60"/>
+                <JInvTableColumnDate fx:id="CREATED" text="%CREATED" fieldName="CREATED"  prefWidth="110"/>
                 <JInvTableColumn prefWidth="250" text="%STATUS" idF7FilterGroup="F7STATUS_GROUP">
                     <columns>
                         <JInvTableColumn fx:id="STATUS_CODE" fieldName="STATUS_CODE" text="%STATUS_CODE" idF7FilterGroup="F7STATUS_GROUP"/>
                         <JInvTableColumn fx:id="STATUS_MESSAGE" fieldName="STATUS_MESSAGE" prefWidth="300.0" text="%STATUS_MESSAGE" idF7FilterGroup="F7STATUS_GROUP"/>
-                        <JInvTableColumnDate fx:id="STATUS_DATE" dateFormat="DATE_TIME" fieldName="STATUS_DATE" text="%STATUS_DATE" idF7FilterGroup="F7STATUS_GROUP"/>
+                        <JInvTableColumnDate fx:id="STATUS_DATE" dateFormat="DATE_TIME" fieldName="STATUS_DATE" text="%STATUS_DATE" prefWidth="110" idF7FilterGroup="F7STATUS_GROUP"/>
                     </columns>
                 </JInvTableColumn>
-                <JInvTableColumn fx:id="reqTypeName" text="%REQ_TYPE" fieldName="reqTypeName"  />
+<!--                <JInvTableColumn fx:id="reqTypeName" text="%REQ_TYPE" fieldName="reqTypeName"  />-->
                 <JInvTableColumn fx:id="NUM" text="%NUM" fieldName="NUM"  />
-                <JInvTableColumnDate fx:id="REQ_DATE" text="%REQ_DATE" fieldName="REQ_DATE"  />
+                <JInvTableColumnDate fx:id="REQ_DATE" text="%REQ_DATE" fieldName="REQ_DATE"  prefWidth="110" />
                 <JInvTableColumnMoney fx:id="MSUMM" text="%MSUMM" fieldName="MSUMM"  />
                 <JInvTableColumnMoney fx:id="MSUMMR" text="%MSUMMR" fieldName="MSUMMR"  />
                 <JInvTableColumn fx:id="CCURCODE" text="%CCURCODE" fieldName="CCURCODE"  />
-                <JInvTableColumn fx:id="LIMIT_CODE" text="%LIMIT_CODE" fieldName="LIMIT_CODE"  />
+                <JInvTableColumn fx:id="LIMIT_CODE" text="%LIMIT_CODE" fieldName="LIMIT_CODE"  prefWidth="30"/>
                 <JInvTableColumn prefWidth="450.0" text="%PAYER" idF7FilterGroup="F7PAYER_GROUP">
                     <columns>
                         <JInvTableColumn fx:id="PAYER_NAME" fieldName="PAYER_NAME" prefWidth="200.0" text="%PAYER_NAME" idF7FilterGroup="F7PAYER_GROUP"/>
@@ -62,7 +57,7 @@
                 </JInvTableColumn>
                 <JInvTableColumn prefWidth="350" text="%RECIP" idF7FilterGroup="F7RECIP_GROUP">
                     <columns>
-                        <JInvTableColumn fx:id="RECIP_NAME" fieldName="RECIP_NAME" prefWidth="300.0" text="%RECIP_NAME" idF7FilterGroup="F7RECIP_GROUP"/>
+                        <JInvTableColumn fx:id="RECIP_NAME" fieldName="RECIP_NAME" prefWidth="200.0" text="%RECIP_NAME" idF7FilterGroup="F7RECIP_GROUP"/>
                         <JInvTableColumn fx:id="RECIP_INN" fieldName="RECIP_INN" text="%RECIP_INN" idF7FilterGroup="F7RECIP_GROUP"/>
                     </columns>
                 </JInvTableColumn>
